versioned_docs/version-5.2/client-api/operations/_what-are-operations-nodejs.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

<Admonition type="note" title="">

* The RavenDB Client API is built with the notion of layers.  
  At the top, and what you will usually interact with, are the **[DocumentStore](../../client-api/what-is-a-document-store.mdx)**
  and the **[Session](../../client-api/session/what-is-a-session-and-how-does-it-work.mdx)**.  
  They in turn are built on top of the lower-level __Operations__ and __RavenCommands__ API.

* **RavenDB provides direct access to this lower-level API**, allowing you to send requests  
  directly to the server via DocumentStore Operations instead of using the higher-level Session API.

* In this page:  
  * [Why use operations](../../client-api/operations/what-are-operations.mdx#why-use-operations)  
  * [How operations work](../../client-api/operations/what-are-operations.mdx#how-operations-work)  
<br/>
  * __Operation types__: 
      * [Common operations](../../client-api/operations/what-are-operations.mdx#common-operations)  
      * [Maintenance operations](../../client-api/operations/what-are-operations.mdx#maintenance-operations)  
      * [Server-maintenance operations](../../client-api/operations/what-are-operations.mdx#server-maintenance-operations)  
  * [Wait for completion](../../client-api/operations/what-are-operations.mdx#wait-for-completion)  

</Admonition>
## Why use operations

* Operations provide __management functionality__ that is Not available in the context of the session, for example:
    * Create/delete a database
    * Execute administrative tasks
    * Assign permissions
    * Change server configuration, and more.

* The operations are executed on the DocumentStore and are Not part of the session transaction.

* There are some client tasks, such as patching documents, that can be carried out either via the Session ([session.advanced.patch()](../../client-api/operations/patching/single-document.mdx#array-manipulation))
  or via an Operation on the DocumentStore ([PatchOperation](../../client-api/operations/patching/single-document.mdx#operations-api)).



## How operations work

* __Sending the request__:  
  Each Operation creates an HTTP request message to be sent to the relevant server endpoint.  
  The DocumentStore `OperationExecutor` sends the request and processes the results.
* __Target node__:  
  By default, the operation will be executed on the server node that is defined by the [client configuration](../../client-api/configuration/load-balance/overview.mdx#client-logic-for-choosing-a-node).  
  However, server-maintenance operations can be executed on a specific node by using the [forNode](../../client-api/operations/how-to/switch-operations-to-a-different-node.mdx) method.  
* __Target database__:  
  By default, operations work on the default database defined in the DocumentStore.  
  However, common operations & maintenance operations can operate on a different database by using the [forDatabase](../../client-api/operations/how-to/switch-operations-to-a-different-database.mdx) method.  
* __Transaction scope__:  
  Operations execute as a single-node transaction.  
  If needed, data will then replicate to the other nodes in the database-group.
* __Background operations__:  
  Some operations may take a long time to complete and can be awaited for completion.   
  Learn more [below](../../client-api/operations/what-are-operations.mdx#wait-for-completion).



## Common operations

<Admonition type="note" title="">

* All common operations implement the `IOperation` interface.  
  The operation is executed within the __database scope__.  
  Use [forDatabase](../../client-api/operations/how-to/switch-operations-to-a-different-database.mdx) to operate on a specific database other than the default defined in the store.  

* These operations include set-based operations such as _PatchOperation_, _CounterBatchOperation_,  
  document-extensions related operations such as getting/putting an attachment, and more.  
  See all available operations [below](../../client-api/operations/what-are-operations.mdx#operations-list).

* To execute a common operation request,  
  use the `send` method on the `operations` property in the DocumentStore.

__Example__:

<TabItem value="operations_ex" label="operations_ex">
<CodeBlock language="js">
{`// Define operation, e.g. get all counters info for a document
const getCountersOp = new GetCountersOperation("products/1-A");

// Execute the operation by passing the operation to operations.send
const allCountersResult = await documentStore.operations.send(getCountersOp);

// Access the operation result
const numberOfCounters = allCountersResult.counters.length;
`}
</CodeBlock>
</TabItem>

</Admonition>

<Admonition type="note" title="">

__Send syntax__:

<TabItem value="operations_send" label="operations_send">
<CodeBlock language="js">
{`// Available overloads:
await send(operation);
await send(operation, sessionInfo);
await send(operation, sessionInfo, documentType);

await send(patchOperaton);
await send(patchOperation, sessionInfo);
await send(patchOperation, sessionInfo, resultType);
`}
</CodeBlock>
</TabItem>

</Admonition>

<Admonition type="note" title="">

&lt;span id="operations-list"&gt; __The following common operations are available:__ &lt;/span&gt;
* __Attachments__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [PutAttachmentOperation](../../client-api/operations/attachments/put-attachment.mdx)  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [GetAttachmentOperation](../../client-api/operations/attachments/get-attachment.mdx)  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [DeleteAttachmentOperation](../../client-api/operations/attachments/delete-attachment.mdx)  

* __Counters__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [CounterBatchOperation](../../client-api/operations/counters/counter-batch.mdx)  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [GetCountersOperation](../../client-api/operations/counters/get-counters.mdx)  

* __Time series__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; TimeSeriesBatchOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetMultipleTimeSeriesOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetTimeSeriesOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetTimeSeriesStatisticsOperation  

* __Revisions__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [GetRevisionsOperation](../../client-api/operations/revisions/get-revisions.mdx)  

* __Patching__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [PatchOperation](../../client-api/operations/patching/single-document.mdx)  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [PatchByQueryOperation](../../client-api/operations/patching/set-based.mdx)  

* __Delete by query__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [DeleteByQueryOperation](../../client-api/operations/common/delete-by-query.mdx)   

* __Compare-exchange__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; PutCompareExchangeValueOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetCompareExchangeValueOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetCompareExchangeValuesOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; DeleteCompareExchangeValueOperation  

</Admonition>


## Maintenance operations

<Admonition type="note" title="">

* All maintenance operations implement the `IMaintenanceOperation` interface.  
  The operation is executed within the __database scope__.  
  Use [forDatabase](../../client-api/operations/how-to/switch-operations-to-a-different-database.mdx) to operate on a specific database other than the default defined in the store.

* These operations include database management operations such as setting client configuration,  
  managing indexes & ongoing-tasks operations, getting stats, and more.  
  See all available maintenance operations [below](../../client-api/operations/what-are-operations.mdx#maintenance-list).
 
* To execute a maintenance operation request,  
  use the `send` method on the `maintenance` property in the DocumentStore.

__Example__:

<TabItem value="maintenance_ex" label="maintenance_ex">
<CodeBlock language="js">
{`// Define operation, e.g. stop an index 
const stopIndexOp = new StopIndexOperation("Orders/ByCompany");

// Execute the operation by passing the operation to maintenance.send
await documentStore.maintenance.send(stopIndexOp);

// This specific operation returns void
// You can send another operation to verify the index running status
const indexStatsOp = new GetIndexStatisticsOperation("Orders/ByCompany");
const indexStats = await documentStore.maintenance.send(indexStatsOp);
const status = indexStats.status; // will be "Paused"
`}
</CodeBlock>
</TabItem>

</Admonition>

<Admonition type="note" title="">

__Send syntax__:

<TabItem value="maintenance_send" label="maintenance_send">
<CodeBlock language="js">
{`await send(operation);
`}
</CodeBlock>
</TabItem>

</Admonition>

<Admonition type="note" title="">

&lt;span id="maintenance-list"&gt; __The following maintenance operations are available:__ &lt;/span&gt;
* __Statistics__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [GetStatisticsOperation](../../client-api/operations/maintenance/get-stats.mdx#get-database-stats)  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [GetDetailedStatisticsOperation](../../client-api/operations/maintenance/get-stats.mdx#get-detailed-database-stats)  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [GetCollectionStatisticsOperation](../../client-api/operations/maintenance/get-stats.mdx#get-collection-stats)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [GetDetailedCollectionStatisticsOperation](../../client-api/operations/maintenance/get-stats.mdx#get-detailed-collection-stats)

* __Client Configuration__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [PutClientConfigurationOperation](../../client-api/operations/maintenance/configuration/put-client-configuration.mdx)  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [GetClientConfigurationOperation](../../client-api/operations/maintenance/configuration/get-client-configuration.mdx)  

* __Indexes__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [PutIndexesOperation](../../client-api/operations/maintenance/indexes/put-indexes.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [SetIndexesLockOperation](../../client-api/operations/maintenance/indexes/set-index-lock.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [SetIndexesPriorityOperation](../../client-api/operations/maintenance/indexes/set-index-priority.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [GetIndexErrorsOperation](../../client-api/operations/maintenance/indexes/get-index-errors.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [GetIndexOperation](../../client-api/operations/maintenance/indexes/get-index.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [GetIndexesOperation](../../client-api/operations/maintenance/indexes/get-indexes.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [GetTermsOperation](../../client-api/operations/maintenance/indexes/get-terms.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetIndexPerformanceStatisticsOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetIndexStatisticsOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetIndexesStatisticsOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetIndexingStatusOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetIndexStalenessOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [GetIndexNamesOperation](../../client-api/operations/maintenance/indexes/get-index-names.mdx)  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [StartIndexOperation](../../client-api/operations/maintenance/indexes/start-index.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [StartIndexingOperation](../../client-api/operations/maintenance/indexes/start-indexing.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [StopIndexOperation](../../client-api/operations/maintenance/indexes/stop-index.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [StopIndexingOperation](../../client-api/operations/maintenance/indexes/stop-indexing.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [ResetIndexOperation](../../client-api/operations/maintenance/indexes/reset-index.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [DeleteIndexOperation](../../client-api/operations/maintenance/indexes/delete-index.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [DeleteIndexErrorsOperation](../../client-api/operations/maintenance/indexes/delete-index-errors.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [DisableIndexOperation](../../client-api/operations/maintenance/indexes/disable-index.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [EnableIndexOperation](../../client-api/operations/maintenance/indexes/enable-index.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [IndexHasChangedOperation](../../client-api/operations/maintenance/indexes/index-has-changed.mdx)   

* __Analyzers__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; PutAnalyzersOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; DeleteAnalyzerOperation  

* __Ongoing tasks__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetOngoingTaskInfoOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; DeleteOngoingTaskOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ToggleOngoingTaskStateOperation  

* __ETL tasks__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; AddEtlOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; UpdateEtlOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [ResetEtlOperation](../../client-api/operations/maintenance/etl/reset-etl.mdx)

* __Replication tasks__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; PutPullReplicationAsHubOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetPullReplicationTasksInfoOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetReplicationHubAccessOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetReplicationPerformanceStatisticsOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; RegisterReplicationHubAccessOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; UnregisterReplicationHubAccessOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; UpdateExternalReplicationOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; UpdatePullReplicationAsSinkOperation

* __Backup__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; BackupOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetPeriodicBackupStatusOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; StartBackupOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; UpdatePeriodicBackupOperation  

* __Connection strings__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; PutConnectionStringOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; RemoveConnectionStringOperation  

* __Transaction recording__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; StartTransactionsRecordingOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; StopTransactionsRecordingOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ReplayTransactionsRecordingOperation  

* __Database settings__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [PutDatabaseSettingsOperation](../../client-api/operations/maintenance/configuration/database-settings-operation.mdx#put-database-settings-operation)  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [GetDatabaseSettingsOperation](../../client-api/operations/maintenance/configuration/database-settings-operation.mdx#get-database-settings-operation)  

* __Identities__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [GetIdentitiesOperation](../../client-api/operations/maintenance/identities/get-identities.mdx)  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [NextIdentityForOperation](../../client-api/operations/maintenance/identities/increment-next-identity.mdx)  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [SeedIdentityForOperation](../../client-api/operations/maintenance/identities/seed-identity.mdx)

* __Time series__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ConfigureTimeSeriesOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ConfigureTimeSeriesPolicyOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ConfigureTimeSeriesValueNamesOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; RemoveTimeSeriesPolicyOperation  

* __Revisions__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [ConfigureRevisionsOperation](../../client-api/operations/revisions/configure-revisions.mdx)  

* __Sorters__:   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [PutSortersOperation](../../client-api/operations/maintenance/sorters/put-sorter.mdx)  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; DeleteSorterOperation  

* __Misc__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ConfigureExpirationOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ConfigureRefreshOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; UpdateDocumentsCompressionConfigurationOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; DatabaseHealthCheckOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetOperationStateOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; CreateSampleDataOperation  

</Admonition>


## Server-maintenance operations

<Admonition type="note" title="">

* All server-maintenance operations implement the `IServerOperation` interface.  
  The operation is executed within the __server scope__.   
  Use [forNode](../../client-api/operations/how-to/switch-operations-to-a-different-node.mdx) to operate on a specific node other than the default defined in the client configuration.

* These operations include server management and configuration operations.  
  See all available operations [below](../../client-api/operations/what-are-operations.mdx#server-list).

* To execute a server-maintenance operation request,  
  use the `send` method on the `maintenance.server` property in the DocumentStore.   

__Example__:

<TabItem value="server_ex" label="server_ex">
<CodeBlock language="js">
{`// Define operation, e.g. get the server build number
const getBuildNumberOp = new GetBuildNumberOperation();

// Execute the operation by passing the operation to maintenance.server.send
const buildNumberResult = await documentStore.maintenance.server.send(getBuildNumberOp);

// Access the operation result
const version = buildNumberResult.buildVersion;
`}
</CodeBlock>
</TabItem>

</Admonition>

<Admonition type="note" title="">

__Send syntax__:

<TabItem value="server_send" label="server_send">
<CodeBlock language="js">
{`await send(operation);
`}
</CodeBlock>
</TabItem>

</Admonition>

<Admonition type="note" title="">

&lt;span id="server-list"&gt; __The following server-maintenance operations are available:__ &lt;/span&gt;
* __Client certificates__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [PutClientCertificateOperation](../../client-api/operations/server-wide/certificates/put-client-certificate.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [CreateClientCertificateOperation](../../client-api/operations/server-wide/certificates/create-client-certificate.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [GetCertificatesOperation](../../client-api/operations/server-wide/certificates/get-certificates.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [DeleteCertificateOperation](../../client-api/operations/server-wide/certificates/delete-certificate.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; EditClientCertificateOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetCertificateMetadataOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ReplaceClusterCertificateOperation  

* __Server-wide client configuration__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [PutServerWideClientConfigurationOperation](../../client-api/operations/server-wide/configuration/put-serverwide-client-configuration.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [GetServerWideClientConfigurationOperation](../../client-api/operations/server-wide/configuration/get-serverwide-client-configuration.mdx)   

* __Database management__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [CreateDatabaseOperation](../../client-api/operations/server-wide/create-database.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [DeleteDatabasesOperation](../../client-api/operations/server-wide/delete-database.mdx)  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [ToggleDatabasesStateOperation](../../client-api/operations/server-wide/toggle-databases-state.mdx)  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [GetDatabaseNamesOperation](../../client-api/operations/server-wide/get-database-names.mdx)  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [AddDatabaseNodeOperation](../../client-api/operations/server-wide/add-database-node.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [PromoteDatabaseNodeOperation](../../client-api/operations/server-wide/promote-database-node.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [ReorderDatabaseMembersOperation](../../client-api/operations/server-wide/reorder-database-members.mdx)   
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [CompactDatabaseOperation](../../client-api/operations/server-wide/compact-database.mdx)  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetDatabaseRecordOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; SetDatabasesLockOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; CreateDatabaseOperationWithoutNameValidation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; SetDatabaseDynamicDistributionOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ModifyDatabaseTopologyOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; UpdateDatabaseOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; UpdateUnusedDatabasesOperation  

* __Server-wide ongoing tasks__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; DeleteServerWideTaskOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ToggleServerWideTaskStateOperation  

* __Server-wide replication tasks__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; PutServerWideExternalReplicationOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetServerWideExternalReplicationOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetServerWideExternalReplicationsOperation  

* __Server-wide backup tasks__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; PutServerWideBackupConfigurationOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetServerWideBackupConfigurationOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetServerWideBackupConfigurationsOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; RestoreBackupOperation

* __Server-wide analyzers__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; PutServerWideAnalyzersOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; DeleteServerWideAnalyzerOperation

* __Server-wide sorters__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [PutServerWideSortersOperation](../../client-api/operations/server-wide/sorters/put-sorter-server-wide.mdx)  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; DeleteServerWideSorterOperation

* __Logs & debug__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; SetLogsConfigurationOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetLogsConfigurationOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetClusterDebugInfoPackageOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; [GetBuildNumberOperation](../../client-api/operations/server-wide/get-build-number.mdx)  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetServerWideOperationStateOperation

* __Traffic watch__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; PutTrafficWatchConfigurationOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; GetTrafficWatchConfigurationOperation

* __Revisions__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ConfigureRevisionsForConflictsOperation  

* __Misc__:  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ModifyConflictSolverOperation  
  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; OfflineMigrationOperation

</Admonition>


## Wait for completion

* Some operations may take a long time to complete.  
  Those operations will run in the server background and can be awaited for completion.  
* Those operations implement an interface with result type `OperationIdResult`.  
* For those operations, the `send` method returns a promise for an object that can be awaited on that Id.  

__Example__:  

<TabItem value="wait_ex" label="wait_ex">
<CodeBlock language="js">
{`// Define operation, e.g. delete all discontinued products 
// Note: This operation implements: 'IOperation<OperationIdResult>'
const deleteByQueryOp = new DeleteByQueryOperation("from Products where Discontinued = true");

// Execute the operation
// 'send' returns an object that can be awaited on
const asyncOperation = await documentStore.operations.send(deleteByQueryOp);

// Call method 'waitForCompletion' to wait for operation completion 
await asyncOperation.waitForCompletion();
`}
</CodeBlock>
</TabItem>

__Syntax__:

<TabItem value="waitForCompletion_syntax" label="waitForCompletion_syntax">
<CodeBlock language="js">
{`await waitForCompletion();
`}
</CodeBlock>
</TabItem>




